deployment-config-maps.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: app-container
        image: nginx:latest
        volumeMounts:
          - name: config-volume
            mountPath: /etc/db-config    # You can choose any mount path
            readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: db-config
